styles: fix table overflow style

--- a/src/renderer/style.css
+++ b/src/renderer/style.css
@@ -24,7 +24,7 @@ body {
 
 #mainTable tbody {
     height: calc(100vh - 120px);
-    overflow: scroll;
+    overflow-y: scroll;
 }
 
 #mainTable td {
